test/bad/tuples/decl04.px

c = [{0}]
[[{Rat}]] a
a, b = [c, [{}]], []
